@@ -3,7 +3,7 @@ use strict;
 use base qw( Exporter );
 our @EXPORT_OK = qw ( ShowOfWeight );
 
-sub ShowOfWeight {
+sub ShowOfWeight ($){
     my ($LitersOfWater) = @_;
     return $LitersOfWater * 1000; ## no critic (ProhibitMagicNumbers)
 }
