@@ -1,6 +1,7 @@
 Revision history for Perl extension Devel-Mockify
 
 {{$NEXT}}
+    - fix issue #34 Prototype mismatch warning when running tests
 
 2.1 2018-03-21T21:24:26Z
     - fix typo in docu
